# CA-P

./: .gitignore  Cargo.toml  README.md
CA/: Cargo.toml
CA/src/: lib.rs  processor.rs  stepper.rs
assets/: rules.ron
ca/src/: lib.rs
src/: main.rs  plugins.rs  setup.rs  systems.rs  ui.rs  utils.rs
src/plugins/: d1.rs  d2.rs  d3.rs
src/systems/: config_controller.rs  simulation_controller.rs
src/utils/: simconfig.rs  universe.rs
