[package]
name = "CA-P"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca = { path = "ca"}
bevy = { version = "0.8", features = ["dynamic"] }
bevy_egui = "0.16"
rand = "0.8"
fraction = "0.11"
serde = "1.0"
ron = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3